# ros2-web-bridge-monitoring

./: README.md  mock_sensor_publisher.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: ChartsContainer.vue  ConnectionStatus.vue  ControlPanel.vue  Dashboard.vue  DashboardFooter.vue  DashboardHeader.vue  EventsLog.vue  MobileMenu.vue  SensorCard.vue
frontend/src/composables/: useRosMonitor.js
frontend/src/config/: rosConfig.js
frontend/src/views/: DashboardView.vue
iot_firmware/: GWNode_1.ino  GWNode_2.ino  GWNode_3.ino  GWNode_4.ino  GW_A.ino  GatewayA.ino  GatewayB.ino
ros2_ws/: .gitignore  demo_sidang.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/dashboard_bridge/lib/dashboard_bridge/: event_bridge
ros2_ws/install/dashboard_bridge/share/dashboard_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/bridge_data/: package.xml  setup.py
ros2_ws/src/bridge_data/bridge_data/: data_publisher.py
ros2_ws/src/bridge_data/launch/: dashboard.launch.py
ros2_ws/src/dashboard_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/dashboard_bridge/launch/: dashboard.launch.py
sistem_cerdas/: README.md
