<?xml version="1.0"?>
<package format="3">
  <name>bridge_data</name>
  <version>1.0.0</version>

  <description>
    Package ROS 2 untuk menjembatani data sensor real-time dari micro-ROS
    ke sistem visualisasi berbasis web melalui rosbridge. Package ini
    berperan sebagai bagian dari pipeline rekayasa data pada sistem IoT.
  </description>

  <maintainer email="rzgvn11gmail.com">
    Alfareza Giovani
  </maintainer>

  <license>Apache License 2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosbridge_server</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>